--- a/App/Text/Protocols/1m.md
+++ b/App/Text/Protocols/1m.md
@@ -1,1 +1,46 @@
-### 1 m² Quadrats
+## 1 m² Quadrats
+
+### Purpose
+
+To determine the abundance (density) of selected sedentary indicator species
+
+### Materials
+
+1. 2   dive slates with pencils
+
+2.	2   underwater 1 m quadrat datasheets
+
+3.	4   3-sided PVC 1 m square quadrats with clips on the two open ends. The quadrats are weighted with a piece of leadline running through the three sides.
+
+### Personnel
+
+2   SCUBA equipped observers experienced in the identification and search image needed for species listed in Table 5.
+
+### Time Required
+
+Approximately 120 minutes of bottom time are needed. Experienced biologists sampling in an area of low species diversity and/or abundance will take less time.
+
+### Methods
+
+Note: No invasive sampling (turning over rocks) is conducted in any KFM methodology, with the exception that sea urchins are removed from crevices to locate and measure smaller sea urchins underneath the spine canopy.  
+
+Divers sample twelve points along the transect line. The points are systematic with a random starting point. At the start of each field season new sampling points must be randomly selected. The initial sampling point (a number between 0-7) is chosen using a number generator. That number will be the meter mark for the first quadrat placement.  The subsequent sampling points along the line are at 8.33 m intervals rounded to the nearest whole number (8 m, 17 m, 25 m, 33 m, etc). Each sampling point is recorded consecutively on the top of the datasheets corresponding to quadrat 1,2,3 etc. This systematic set of numbers with a random start will be the same for all sites sampled throughout a field season.
+
+Each diver is equipped with two three-sided meter square quadrats (Figure 17). Divers work on opposite sides of the transect (A and B in Figure 18) using the transect line as the fourth side to each quadrat. The quadrat is positioned so that one leg is on the predetermined sampling point and the other leg is on the next greater meter number. The divers place one quadrat on the first meter mark (meter #3 in Figure 18 below) listed on the datasheet and then proceed down the transect line to the next meter number (meter #11 below) on the datasheet and position the other quadrat in the same manner. If conditions are surgy enough to displace the quadrats, divers use the clips to attach them to the leadline/meter tape on the open end. The divers then return to the first pair (A1 and B1) of quadrats placed along the transect line to begin sampling. Divers may cause the benthic fish species to retreat into holes or crevices. Therefore, it is important that they approach the quadrats slowly to minimize this. fish are counted first within the quadrat. Once they are counted, any additional fish that swim into the quadrat are not counted. Diver must be sure to search under ledges and in cracks for organisms without conducting invasive sampling (i.e. turning over rocks). An organism must be 50% or more inside of quadrat to be counted.  
+ 
+Figure 17. Photo of proper quadrat placement.
+
+The purpose of using two quadrats in this methodology is so that while one quadrat is being sampled, the other quadrat is already in place for at least a minute or more, allowing for any previously disturbed fish to reemerge for counting. In high surge conditions it may not be possible for a quadrat to remain in place. In these conditions, the lead biologist will decide whether to abort this protocol or in some cases where the indicator fish species are extremely rare or not present, one quadrat can be used. In the latter case, divers take extra caution to sneak up on the quadrat location and look for indicator fish species while the quadrat is being placed, to count them first before laying down the quadrat and disturbing them.
+
+On each quadrat, each diver covers an area of 1 m x 1 m. Adjacent quadrats (Count A and Count B) from both divers are combined in the database to produce a sampled quadrats of 1 m x 2 m at each of the 12 points. See data history section for a description of changes made to the area sampled since KFM was first implemented in 1982.
+
+Figure 18. Proper placement of 1 m quadrats at meter #3 and meter #11.
+
+Sometimes it is necessary to clean off the pebbles and shells that hide organisms in order to identify them. However, divers do not conduct any invasive sampling (i.e. they do not turn over rocks and do not remove organisms unless necessary for identification purposes). Counts of adults and juveniles for all species are combined except algae, where the densities of juveniles and adults are separate. See Table 5 for the definitions of adult and juvenile algae.
+
+After the first set of quadrat counts are completed, divers move the first quadrat to the third meter number listed on the datasheet. They swim carefully around the other set of quadrats, keeping at least one meter to the outside of the quadrats so as not to disturb fish in the quadrats. After positioning the third set of quadrats, the divers return to the second set (A2 and B2 in Figure 18 above) and begin by counting the fishes. This cycle is repeated (leapfrogging) until each diver has sampled twelve 1 m x 1 m quadrats.
+
+After returning to the surface, each diver checks their own and their buddy’s quadrat sheets for readability and data outliers. Datasheets are rinsed, allowed to air dry, and then stored in the completed datasheet notebook. The raw datasheets are used for data entry in the office before being filed in the datasheet cabinets.
+
+At the bottom of Table 5 is a list of “Write-In” species. These are species that are only present at a few sites in high enough densities to warrant counting on quadrats. Also, there is not enough room on the datasheet to include a separate row for each of them. The lead biologist may instruct divers to collect quadrat data for one or two of these species prior to the dive. The divers collecting quadrat data can also decide to count a “write-in” species after assessing the site at the beginning of the dive. However, it is important that the divers communicate to each other to count the write-in species. Both divers must collect density data for the write-in species in all 12 quadrats for the data to be used. The species name can be written in the blank row at the bottom of the quadrat datasheet.
+
